--- a/reflexactoring.diagram/build.properties
+++ b/reflexactoring.diagram/build.properties
@@ -11,7 +11,10 @@ bin.includes = .,\
                lib/pageranking.jar,\
                lib/optimization.jar,\
                lib/colt.jar,\
-               lib/concurrent.jar
+               lib/concurrent.jar,\
+               lib/antlr-3.0.1.jar,\
+               lib/jccd-1.0.6.jar,\
+               lib/log4j-1.2.8.jar
 jars.compile.order = .
 source.. = src/
 output.. = bin/
