Build a new skeleton for refactoring suggestions view.

--- a/reflexactoring.diagram/plugin.xml
+++ b/reflexactoring.diagram/plugin.xml
@@ -819,6 +819,14 @@
       </view>
       <view
             category="reflexactoring.diagram.view.category"
+            class="reflexactoring.diagram.view.RefactoringSuggestionsView"
+            icon="icons/view/suggestion.jpg"
+            id="reflexactoring.diagram.view.refactoringSuggestion"
+            name="Refactoring Suggestion"
+            restorable="true">
+      </view>
+      <view
+            category="reflexactoring.diagram.view.category"
             class="reflexactoring.diagram.view.ModuleUnitsSimilarityView"
             icon="icons/view/module_type_similarity.gif"
             id="reflexactoring.diagram.view.moduleTypeSimilarity"
