Add a new relation between modules, a module can create another module.

--- a/reflexactoring.diagram/plugin.properties
+++ b/reflexactoring.diagram/plugin.properties
@@ -47,3 +47,4 @@ cmdcategory.name=Reflexactoring Editor Commands
 cmdcategory.desc=Reflexactoring Editor Commands
 
 metatype.name.ModuleExtend_4006=ModuleExtend
+metatype.name.ModuleCreation_4007=ModuleCreation
