--- a/reflexactoring.edit/plugin.properties
+++ b/reflexactoring.edit/plugin.properties
@@ -61,3 +61,4 @@ _UI_ModuleExtend_type = Module Extend
 _UI_ModuleLink_origin_feature = Origin
 _UI_ModuleLink_destination_feature = Destination
 _UI_ModuleLink_name_feature = Name
+_UI_ModuleCreation_type = Module Creation
