--- a/reflexactoring.diagram/plugin.xml
+++ b/reflexactoring.diagram/plugin.xml
@@ -65,121 +65,6 @@
                id="reflexactoring.diagram.InitDiagramAction">
          </action>
       </objectContribution>
-      <objectContribution
-            adaptable="false"
-            id="reflexactoring.diagram.module"
-            objectClass="reflexactoring.diagram.edit.parts.ModuleEditPart">
-         <action
-               class="reflexactoring.diagram.action.popup.UnfreezeMemberAction"
-               id="reflexactoring.diagram.action.unFreezeMemberAction"
-               label="Unfreeze Member">
-         </action>
-         <action
-               class="reflexactoring.diagram.action.popup.FreezeMemberAction"
-               id="reflexactoring.diagram.action.freezeMemberAction"
-               label="Freeze Member">
-         </action>
-         <action
-               class="reflexactoring.diagram.action.popup.EditModuleDescriptionAction"
-               id="reflexactoring.diagram.action.editdescription"
-               label="Edit Name or Description">
-         </action>
-      </objectContribution>
-      <objectContribution
-            adaptable="false"
-            id="reflexactoring.diagram.classOnCanvas"
-            objectClass="reflexactoring.diagram.edit.parts.ClassEditPart">
-         <action
-               class="reflexactoring.diagram.action.popup.RemoveFromScopeAction"
-               id="reflexactoring.diagram.action.removeClassOnCanvas"
-               label="Remove from Scope">
-         </action>
-         <action
-               class="reflexactoring.diagram.action.popup.OpenSourceAction"
-               id="reflexactoring.diagram.action.open"
-               label="Open Source">
-         </action>
-      </objectContribution>
-      <objectContribution
-            adaptable="false"
-            id="reflexactoring.diagram.classInModule"
-            objectClass="reflexactoring.diagram.edit.parts.Class2EditPart">
-         <action
-               class="reflexactoring.diagram.action.popup.RemoveFromScopeAction"
-               id="reflexactoring.diagram.action.removeClassOnModule"
-               label="Remove from Scope">
-         </action>
-         <action
-               class="reflexactoring.diagram.action.popup.OpenSourceAction"
-               id="reflexactoring.diagram.action.open"
-               label="Open Source">
-         </action>
-         <action
-               class="reflexactoring.diagram.action.popup.FixMappingMemberAction"
-               id="reflexactoring.diagram.action.fixMember"
-               label="Fix All Members">
-         </action>
-         <action
-               class="reflexactoring.diagram.action.popup.FixPartOfMappingMemberAction"
-               id="reflexactoring.diagram.action.fixPartMembers"
-               label="Fix Part Members">
-         </action>
-      </objectContribution>
-      <objectContribution
-            adaptable="false"
-            id="reflexactoring.diagram.interfaceOnCanvas"
-            objectClass="reflexactoring.diagram.edit.parts.InterfaceEditPart">
-         <action
-               class="reflexactoring.diagram.action.popup.RemoveFromScopeAction"
-               id="reflexactoring.diagram.action.removeIntefaceOnCanvas"
-               label="Remove from Scope">
-         </action>
-         <action
-               class="reflexactoring.diagram.action.popup.OpenSourceAction"
-               id="reflexactoring.diagram.action.open"
-               label="Open Source">
-         </action>
-      </objectContribution>
-      <objectContribution
-            adaptable="false"
-            id="reflexactoring.diagram.interfaceInModule"
-            objectClass="reflexactoring.diagram.edit.parts.Interface2EditPart">
-         <action
-               class="reflexactoring.diagram.action.popup.RemoveFromScopeAction"
-               id="reflexactoring.diagram.action.removeIntefaceOnModule"
-               label="Remove from Scope">
-         </action>
-         <action
-               class="reflexactoring.diagram.action.popup.OpenSourceAction"
-               id="reflexactoring.diagram.action.open"
-               label="Open Source">
-         </action>
-      </objectContribution>
-      <objectContribution
-            adaptable="false"
-            id="reflexactoring.diagram.moduleDependency"
-            objectClass="reflexactoring.diagram.edit.parts.ModuleDependencyEditPart">
-         <action
-               class="reflexactoring.diagram.action.popup.HideContributionAction"
-               id="reflexactoring.diagram.action.hideContribution"
-               label="Hide Contribution">
-         </action>
-         <action
-               class="reflexactoring.diagram.action.popup.HighlightContributionAction"
-               id="reflexactoring.diagram.action.highlightContribution"
-               label="Highlight Contribution">
-         </action>
-      </objectContribution>
-      <objectContribution
-            adaptable="false"
-            id="reflexactoring.diagram.typeDependency"
-            objectClass="reflexactoring.diagram.edit.parts.TypeDependencyEditPart">
-         <action
-               class="reflexactoring.diagram.action.popup.ShowReferenceDetailAction"
-               id="reflexactoring.diagram.action.showReferenceDetail"
-               label="Show Reference Detail">
-         </action>
-      </objectContribution>
    </extension>
 	
    <extension point="org.eclipse.gmf.runtime.common.ui.services.action.globalActionHandlerProviders" id="global-actions">
@@ -235,7 +120,7 @@
       <?gmfgen generated="true"?>
       <page
             id="reflexactoring.diagram.general"
-            name="Refleactoring"
+            name="%prefpage.reflexactoring.diagram.general"
             class="reflexactoring.diagram.preferences.DiagramGeneralPreferencePage">
       </page>
       <page
@@ -261,18 +146,6 @@
             name="%prefpage.reflexactoring.diagram.rulersAndGrid"
             category="reflexactoring.diagram.general"
             class="reflexactoring.diagram.preferences.DiagramRulersAndGridPreferencePage">
-      </page>
-      <page
-            category="reflexactoring.diagram.general"
-            class="reflexactoring.diagram.preferences.ProjectInfoPage"
-            id="reflexactoring.diagram.projectInfo"
-            name="Project Information">
-      </page>
-      <page
-            category="reflexactoring.diagram.general"
-            class="reflexactoring.diagram.preferences.RecommendSettingPage"
-            id="reflexactoring.diagram.recommend"
-            name="Recommend Settings">
       </page>
    </extension>
 
@@ -345,7 +218,7 @@
          <Priority name="Lowest"/>
          <context viewClass="org.eclipse.gmf.runtime.notation.Diagram" semanticHints="Reflexactoring"/>
          <context viewClass="org.eclipse.gmf.runtime.notation.Node" semanticHints="2001,2002,2003,3001,3002"/>
-         <context viewClass="org.eclipse.gmf.runtime.notation.Edge" semanticHints="4001,4006,4002,4003,4004,4005"/>
+         <context viewClass="org.eclipse.gmf.runtime.notation.Edge" semanticHints="4001,4006,4002,4003,4004,4005,4007"/>
       </viewProvider>
    </extension>
 
@@ -360,7 +233,7 @@
             <method name="getType()" value="2001,2002,2003,3001,3002"/>
          </object>
          <object class="org.eclipse.gmf.runtime.notation.Edge" id="generated-links">
-            <method name="getType()" value="4001,4006,4002,4003,4004,4005"/>
+            <method name="getType()" value="4001,4006,4002,4003,4004,4005,4007"/>
          </object>
          <object class="org.eclipse.gmf.runtime.notation.Node" id="generated-labels">
             <method name="getType()" value="5001,5002,5005,5003,5004"/>
@@ -520,6 +393,16 @@
             <param name="semanticHint" value="4005"/>
          </metamodelType>
       </metamodel>
+      <metamodel nsURI="http://reflexactoring.com">
+         <metamodelType
+               id="reflexactoring.diagram.ModuleCreation_4007"
+               name="%metatype.name.ModuleCreation_4007"
+               kind="org.eclipse.gmf.runtime.emf.type.core.IHintedType"
+               eclass="ModuleCreation"
+               edithelper="reflexactoring.diagram.edit.helpers.ModuleCreationEditHelper">
+            <param name="semanticHint" value="4007"/>
+         </metamodelType>
+      </metamodel>
    </extension>
 
    <extension point="org.eclipse.gmf.runtime.emf.type.core.elementTypeBindings" id="element-types-bindings">
@@ -544,6 +427,7 @@
          <elementType ref="reflexactoring.diagram.TypeDependency_4003"/>
          <elementType ref="reflexactoring.diagram.InterfaceExtend_4004"/>
          <elementType ref="reflexactoring.diagram.Implement_4005"/>
+         <elementType ref="reflexactoring.diagram.ModuleCreation_4007"/>
          <advice ref="org.eclipse.gmf.runtime.diagram.core.advice.notationDepdendents"/>
       </binding>
    </extension>
